# cosmo-RAG

./: .gitignore  README.md  debug_agent_step.py  debug_small.py  diagnose_hang.py  environment.yaml  main.py  pyproject.toml  requirements.txt  simple_test.py  test_agent.py  test_dataset.py  test_init_steps.py  working_retrieval.py
agents/: decompose_agent.py  multi_retrieval_agents.py  summary_agent.py
bench/: build_index.py  eval.py
configs/: decompose_agent.yaml
core/configs/: multi_retrieval_agents.yaml
core/retrieval/: vector_retrieval.py  web_retrieval.py
dataset/: download_ScienceQA.sh
ext/adapters/: techreport_adapter.py
ext/agents/: generation_agent.py  image_retrieval_agent.py  mlx_vlm_generation_agent.py  text_retrieval_agent.py  vlm_generation_agent.py
ext/configs/: gemma3_test.yaml  mlx_qwen2vl.yaml  my_gemma3.yaml  tech_min.yaml  tech_min_light.yaml  tech_multimodal.yaml  tech_multimodal_optimized.yaml  tech_multimodal_small.yaml  vlm_gemma3.yaml  vlm_lightweight.yaml  vlm_phi4.yaml  vlm_qwen.yaml
ext/decision/: voting_agent.py
ext/preprocess/: vision_encoder.py  vision_encoder_blip.py
prompts/: base_prompt.py
retrieval/: base_retrieval.py  graph_retrieval.py
