[project]
name = "cosmo-rag"
version = "0.1.0"
description = "Multimodal RAG system with TechReport dataset"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "torch",
    "faiss-cpu",
    "datasets",
    "sentence-transformers",
    "uvicorn",
    "pillow",
    "tqdm",
    "rich",
    "pyyaml",
    "numpy",
    "transformers",
    "torchvision>=0.22.0",
    "accelerate>=1.7.0",
    "mlx>=0.25.2",
    "mlx-vlm>=0.1.26",
    "huggingface-hub>=0.32.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["ext", "agents", "retrieval", "models", "prompts"]

[tool.uv]
dev-dependencies = []
